--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     <h2>Response</h2>
     <pre id="response"></pre>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
