--- a/index.html
+++ b/index.html
@@ -2,35 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REST API Client by Akshay Nair (21BCE11013)</title>
+    <title>Your Roll Number</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .error { color: red; }
+        .hidden { display: none; }
+    </style>
 </head>
 <body>
     <h1>REST API Client</h1>
-
-    <h2>POST Request</h2>
-    <form id="postForm">
-        <label for="userId">User ID:</label>
-        <input type="text" id="userId" name="userId" required><br><br>
-
-        <label for="email">College Email ID:</label>
-        <input type="email" id="email" name="email" required><br><br>
-
-        <label for="rollNumber">College Roll Number:</label>
-        <input type="text" id="rollNumber" name="rollNumber" required><br><br>
-
-        <label for="dataArray">Data Array (comma-separated values):</label>
-        <input type="text" id="dataArray" name="dataArray" required><br><br>
-
-        <button type="button" onclick="sendPostRequest()">Send POST Request</button>
-    </form>
-
-    <h2>GET Request</h2>
-    <button onclick="sendGetRequest()">Send GET Request</button>
-
-    <h2>Response</h2>
-    <pre id="response"></pre>
+    <textarea id="jsonInput" placeholder='Enter JSON e.g., {"data": ["A","C","z"]}' rows="4" cols="50"></textarea>
+    <br>
+    <button onclick="sendPostRequest()">Submit</button>
+    <p id="errorMessage" class="error hidden"></p>
+    
+    <div id="dropdownContainer" class="hidden">
+        <select id="multiSelect" multiple>
+            <option value="alphabets">Alphabets</option>
+            <option value="numbers">Numbers</option>
+            <option value="highest_lowercase">Highest Lowercase Alphabet</option>
+        </select>
+    </div>
+    
+    <div id="responseContainer"></div>
 
     <script src="app.js"></script>
 </body>
